Implement phase 10 testing/debugging and error handling